--- a/src/frontend/src/styles/fonts.css
+++ b/src/frontend/src/styles/fonts.css
@@ -1,7 +1,7 @@
 /* src/styles/fonts.css */
 @font-face {
     font-family: 'Lazy Dog';
-    src: url('../../public/assets/fonts/LazyDog/lazy_dog.ttf') format('truetype'); /* Adjust path if necessary */
+    src: url('../../public/assets/fonts/LazyDog/Lazydog.otf') format('truetype'); /* Adjust path if necessary */
     font-weight: normal;
     font-style: normal;
 }
